Action button footer on overview page now appears above everything else. This means the EyeDraw widget no longer prevent users interacting with the button to show the action buttons in Landscape mode. EyeDraw widget now scales appropriately in landscape mode. NOTE: In portrait mode on a tablet, the bottom is cut off. Applying the same scaling technique as is currently used squashes the image as the vertical dimensions are the only dimensions changed, so we will need to dynamically resize it based on the new canvas dimensions.

--- a/protected/modules/OphTrOperationbooking/assets/css/whiteboard.css
+++ b/protected/modules/OphTrOperationbooking/assets/css/whiteboard.css
@@ -1,327 +1,4 @@
-/* line 348, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-version {
-  font-family: "/5.5.1/";
-}
-
-/* line 352, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-small {
-  font-family: "/only screen/";
-  width: 0;
-}
-
-/* line 357, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-small-only {
-  font-family: "/only screen and (max-width: 40em)/";
-  width: 0;
-}
-
-/* line 362, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-medium {
-  font-family: "/only screen and (min-width:40.063em)/";
-  width: 40.063em;
-}
-
-/* line 367, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-medium-only {
-  font-family: "/only screen and (min-width:40.063em) and (max-width:64em)/";
-  width: 40.063em;
-}
-
-/* line 372, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-large {
-  font-family: "/only screen and (min-width:64.063em)/";
-  width: 64.063em;
-}
-
-/* line 377, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-large-only {
-  font-family: "/only screen and (min-width:64.063em) and (max-width:90em)/";
-  width: 64.063em;
-}
-
-/* line 382, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-xlarge {
-  font-family: "/only screen and (min-width:90.063em)/";
-  width: 90.063em;
-}
-
-/* line 387, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-xlarge-only {
-  font-family: "/only screen and (min-width:90.063em) and (max-width:120em)/";
-  width: 90.063em;
-}
-
-/* line 392, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-mq-xxlarge {
-  font-family: "/only screen and (min-width:120.063em)/";
-  width: 120.063em;
-}
-
-/* line 397, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-meta.foundation-data-attribute-namespace {
-  font-family: false;
-}
-
-/* line 404, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-html, body {
-  height: 100%;
-}
-
-/* line 407, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/* line 413, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-html,
-body {
-  font-size: 100%;
-}
-
-/* line 417, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-body {
-  background: #fff;
-  color: #222;
-  padding: 0;
-  margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-weight: normal;
-  font-style: normal;
-  line-height: 1.5;
-  position: relative;
-  cursor: auto;
-}
-
-/* line 430, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-a:hover {
-  cursor: pointer;
-}
-
-/* line 433, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-/* line 435, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-img {
-  -ms-interpolation-mode: bicubic;
-}
-
-/* line 439, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-#map_canvas img,
-#map_canvas embed,
-#map_canvas object,
-.map_canvas img,
-.map_canvas embed,
-.map_canvas object {
-  max-width: none !important;
-}
-
-/* line 446, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-.left {
-  float: left !important;
-}
-
-/* line 447, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-.right {
-  float: right !important;
-}
-
-/* line 172, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-.clearfix:before, .clearfix:after {
-  content: " ";
-  display: table;
-}
-/* line 173, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-.clearfix:after {
-  clear: both;
-}
-
-/* line 451, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-.hide {
-  display: none;
-}
-
-/* line 456, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-.invisible {
-  visibility: hidden;
-}
-
-/* line 462, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-.antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-/* line 465, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-img {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-/* line 475, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-textarea {
-  height: auto;
-  min-height: 50px;
-}
-
-/* line 478, ../../../../assets/components/foundation/scss/foundation/components/_global.scss */
-select {
-  width: 100%;
-}
-
-/* line 35, ../../../../assets/sass/openeyes/components/_tooltips.scss */
-.tooltip, .quicklook {
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  -moz-box-shadow: 2px 2px 2px 0 #999;
-  -webkit-box-shadow: 2px 2px 2px 0 #999;
-  box-shadow: 2px 2px 2px 0 #999;
-  color: #333;
-  display: none;
-  font-size: 0.75rem;
-  font-style: italic;
-  padding: 3px 6px 3px 3px;
-  position: absolute;
-  border: 1px solid #444;
-}
-/* line 45, ../../../../assets/sass/openeyes/components/_tooltips.scss */
-.tooltip.alerts, .alerts.quicklook {
-  border: 2px solid #ee9;
-  background: #ffe;
-}
-
-/* line 39, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook {
-  background: #fff;
-  border: 1px solid #3665ff;
-  line-height: 1.3;
-  padding: 5px;
-  width: 200px;
-  z-index: 200;
-}
-/* line 47, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook .event-name,
-.quicklook .event-info,
-.quicklook .event-issue {
-  display: block;
-}
-/* line 52, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook .event-name {
-  font-weight: bold;
-  padding-bottom: 3px;
-}
-/* line 56, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook .event-info {
-  font-size: 11px;
-}
-/* line 59, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook .event-issue {
-  background: #fdf2e5 url('../img/_elements/icons/event/status/alert.png') top left no-repeat;
-  color: #600;
-  font-size: 11px;
-  margin-top: 7px;
-  padding: 5px 0 5px 20px;
-}
-/* line 66, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.events .quicklook {
-  left: 140px;
-  top: -5px;
-  z-index: 1;
-}
-/* line 71, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook.warning {
-  width: auto;
-  background: #eb5911;
-  border: 2px solid #fff;
-  color: #fff;
-  padding: 2px 5px;
-}
-/* line 77, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook.warning:after {
-  left: -moz-calc(50% - 3px);
-  left: -o-calc(50% - 3px);
-  left: -webkit-calc(50% - 3px);
-  left: calc(50% - 3px);
-  border-bottom: 5px solid #fff;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  content: "";
-  position: absolute;
-  top: -6px;
-}
-/* line 87, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook ul {
-  margin: 6px 0 6px 18px;
-}
-/* line 89, ../../../../assets/sass/openeyes/components/_quicklook.scss */
-.quicklook ul li {
-  font-size: 0.75rem;
-}
-
-/* line 21, ../sass/whiteboard.scss */
-#exit-button {
-  background-color: #f00;
-  color: #fff;
-}
-
-/* line 27, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card {
-  min-height: 100px;
-  width: 100%;
-  display: block;
-}
-@media screen and (min-width: 840px) {
-  /* line 27, ../sass/whiteboard.scss */
-  .mdl-grid .mdl-card {
-    min-height: 150px;
-  }
-}
-/* line 34, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__title {
-  color: #fff;
-}
-/* line 36, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__title.patient {
-  background-color: #3f51b5;
-}
-/* line 39, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__title.biometry {
-  background-color: #a53dcc;
-}
-/* line 42, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__title.risk {
-  background-color: #c23f3a;
-}
-/* line 45, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__title.comment {
-  background-color: #33c23d;
-}
-/* line 48, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__title .mdl-card__title-text {
-  font-size: 16px;
-  font-weight: 700;
-}
-/* line 52, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__title .material-icons {
-  cursor: pointer;
-  font-size: 18px;
-}
-/* line 57, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__supporting-text {
-  font-size: 18px;
-  line-height: 1.1em;
-  font-weight: 700;
-}
-/* line 61, ../sass/whiteboard.scss */
-.mdl-grid .mdl-card .mdl-card__supporting-text textarea {
-  font-size: inherit;
-  color: black;
-  width: 100%;
+.ed-widget.display, .ed-editor-container, .ed-body, .ed-body * {
+  width: 100% !important;
+  height: 100% !important;
 }
