Fixed issue where GP side of FP10 printout was wrapping to a new row. (#4967)
* Fixed issue where GP side of FP10 printout was wrapping to a new row.
Removed invalid semicolons in FP10 CSS file where !important was used.
Added scale property to PuppeteerBrowser. This is currently used only for FP10/WP10 printouts to fit them correctly.

(cherry picked from commit 0bb17666fe85cb9a0c2f608819196ed5e07b4fc3)

* Fixed issue where having page width set could potentially result in a null page height being set.

--- a/protected/modules/OphDrPrescription/assets/css/fpten.css
+++ b/protected/modules/OphDrPrescription/assets/css/fpten.css
@@ -46,10 +46,6 @@ body {
     width: 105mm;
 }
 
-.fpten-container {
-    width: 105mm;
-}
-
 .fpten-form-row:before, .fpten-form-row:after {
     display: table;
     content: '';
@@ -73,7 +69,6 @@ body {
 /*Site box appears at the bottom toward the center.*/
 .fpten-site, .wpten-site {
     text-align: left;
-    /*width: 50mm;*/
     margin-left: 14mm;
     padding-top: 2mm;
     padding-left: 3mm;
@@ -128,7 +123,7 @@ body {
 }
 
 .right .wpten-age, .right .wpten-dob, .right .fpten-age, .right .fpten-dob {
-    margin-left: 27mm; !important;
+    margin-left: 27mm !important;
 }
 
 /*Patient details box appears at the top right corner beside age and DOB.*/
@@ -175,7 +170,7 @@ body {
 }
 
 .right .fpten-prescriber {
-    margin-left: 25mm; !important;
+    margin-left: 25mm !important;
 }
 
 .wpten-prescriber {
@@ -212,7 +207,7 @@ body {
 }
 
 .right .fpten-prescription-list, .right .wpten-prescription-list {
-    margin-left: 25mm; !important;
+    margin-left: 25mm !important;
 }
 
 .fpten-prescription-item {
@@ -242,11 +237,11 @@ body {
 }
 
 .right .wpten-date {
-    margin-left: 65mm; !important;
+    margin-left: 65mm !important;
 }
 
 .right .fpten-date {
-    margin-left: 53mm; !important;
+    margin-left: 53mm !important;
 }
 
 .fpten-page-counter {
